# brat

./: .gitignore  LICENSE  README.md  batch_brat_ucsf_pdgm.sh  extract_features.py  model.py  paper.txt  pyproject.toml  requirements.txt  run_inference.py
