[project]
name = "brat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "monai==1.4.0",
    "safetensors==0.4.3",
    "salesforce-lavis==1.0.2",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.26.1",
]
